--- a/package.json
+++ b/package.json
@@ -16,18 +16,22 @@
     "@babel/register": "^7.12.1",
     "@babel/runtime": "^7.12.1",
     "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^2.1.1",
+    "eslint": "^8.9.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.4",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^1.3.0",
     "webpack": "^4.44.2",
     "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^3.11.0",
-    "clean-webpack-plugin": "^3.0.0"
+    "webpack-dev-server": "^3.11.0"
   },
   "scripts": {
     "dev": "webpack serve",
-    "build": "webpack --mode=production --progress"
+    "build": "webpack --mode=production --progress",
+    "lint": "npx eslint --ext .js ./src"
   },
   "keywords": [
     "leaflet",
