--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,6 +16,7 @@ jobs:
         name: Run eslint
         run: npm run lint
   publish:
+    runs-on: ubuntu-latest
     needs: lint
     if: startsWith(github.ref, 'refs/tags/')
     steps:
